# PaliGemma-exercise

./: LICENSE  pyproject.toml
paligemma/: siglip.py
tests/: test_siglip.py
